WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194292
[SVG] fix SVGURIReference build by including SVGElement
https://bugs.webkit.org/show_bug.cgi?id=194292
Summary
[SVG] fix SVGURIReference build by including SVGElement
Olivier Blin
Reported
2019-02-05 09:47:02 PST
SVGURIReference is making use of SVGElement in its constructor, but the include is missing. The issue was not seen in unified builds because it was grouped with other files including SVGElement.
Attachments
Patch
(1.25 KB, patch)
2019-02-05 09:48 PST
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
Patch
(1.69 KB, patch)
2019-02-06 05:04 PST
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2019-02-05 09:48:35 PST
Created
attachment 361198
[details]
Patch
Michael Catanzaro
Comment 2
2019-02-05 10:51:46 PST
Comment on
attachment 361198
[details]
Patch Looks like a forward declaration would suffice here, right?
Olivier Blin
Comment 3
2019-02-06 05:04:51 PST
Created
attachment 361289
[details]
Patch
WebKit Commit Bot
Comment 4
2019-02-06 10:22:43 PST
Comment on
attachment 361289
[details]
Patch Clearing flags on attachment: 361289 Committed
r241027
: <
https://trac.webkit.org/changeset/241027
>
WebKit Commit Bot
Comment 5
2019-02-06 10:22:45 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-02-06 10:23:27 PST
<
rdar://problem/47854173
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug