[SVG] fix SVGURIReference build by including SVGElement https://bugs.webkit.org/show_bug.cgi?id=194292

Patch by Olivier Blin <olivier.blin@softathome.com> on 2019-02-06
Reviewed by Michael Catanzaro.

* svg/SVGURIReference.h:
SVGURIReference is making use of SVGElement in its constructor, but
it was not declared.

The issue was not seen in unified builds because it was grouped with
other files including SVGElement.

Canonical link: https://commits.webkit.org/208785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241027 268f45cc-cd09-0410-ab3c-d52691b4dbfc